# libusage

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  compileandrun.sh  todo.md
example/: CMakeLists.txt  example_1.c  example_2.c  illustration_main.c
include/: usage.h
lib/: libusage.so.0  libusage.so.0.2.1  libusage.so.1.0
playground/: CMakeLists.txt  example_1.c  example_2.c
src/: usage.c
